# 24point

./: .gitignore  LOGS.md  README.md  pyproject.toml  reference.md  requirements.txt
scripts/: build_offline_eval_data.py  build_sft_data.py  evaluate.py  infer.py  prepare_data.py  setup_env.sh  train_grpo.py  train_sft.py
src/twentyfour/: __init__.py  data.py  prompts.py  rewards.py  solver.py  verifier.py
tests/: test_verifier.py
